--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+NetworkClient.xcworkspace/xcshareddata
+Demo/Demo.xcodeproj/project.xcworkspace/xcshareddata
